# ec2-dynamic-sync

./: CHANGELOG.md  CONTRIBUTING.md  DIAGNOSTIC_SUMMARY.md  LICENSE  README.md  TROUBLESHOOTING_GUIDE.md  debug_user_config.py  debug_watch_mode.py  live_monitor.py  pyproject.toml  requirements.txt  test_config.yaml
scripts/: deploy.sh  install.sh  test_basic_functionality.py
src/ec2_dynamic_sync/: __init__.py  __version__.py
src/ec2_dynamic_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ec2_dynamic_sync/cli/: __init__.py  daemon.py  doctor.py  main.py  setup.py  watch.py
src/ec2_dynamic_sync/core/: __init__.py  aws_manager.py  config_manager.py  enhanced_rsync.py  exceptions.py  models.py  rsync_manager.py  ssh_manager.py  sync_daemon.py  sync_orchestrator.py
tests/: test_cli_commands.py  test_integration.py
